--- a/examples/stock.ipynb
+++ b/examples/stock.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 2
     }
    ],
    "source": [
@@ -84,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "processing 300750: 100%|██████████| 2/2 [00:02<00:00,  1.06s/it]\n"
+      "processing 300750: 100%|██████████| 2/2 [00:00<00:00,  8.01it/s]"
      ]
     },
     {
@@ -109,7 +109,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>股票代码</th>\n      <th>股票名称</th>\n      <th>市盈率(动)</th>\n      <th>市盈率</th>\n      <th>所处行业</th>\n      <th>总市值</th>\n      <th>流通市值</th>\n      <th>板块编号</th>\n      <th>ROE</th>\n      <th>净利率</th>\n      <th>净利润</th>\n      <th>毛利率</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>600519</td>\n      <td>贵州茅台</td>\n      <td>49.50</td>\n      <td>15.76</td>\n      <td>酿酒行业</td>\n      <td>2.763007e+12</td>\n      <td>2.763007e+12</td>\n      <td>BK0477</td>\n      <td>8.29</td>\n      <td>54.1678</td>\n      <td>1.395446e+10</td>\n      <td>91.6763</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>300750</td>\n      <td>宁德时代</td>\n      <td>121.98</td>\n      <td>14.53</td>\n      <td>汽车行业</td>\n      <td>9.536168e+11</td>\n      <td>5.555143e+11</td>\n      <td>BK0481</td>\n      <td>3.01</td>\n      <td>12.2289</td>\n      <td>1.954417e+09</td>\n      <td>27.2795</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ],
    "source": [
@@ -126,9 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "processing 300750: 100%|██████████| 2/2 [00:00<00:00,  2.83it/s]\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -164,7 +171,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>股票名称</th>\n      <th>股票代码</th>\n      <th>日期</th>\n      <th>开盘</th>\n      <th>收盘</th>\n      <th>最高</th>\n      <th>最低</th>\n      <th>成交量</th>\n      <th>成交额</th>\n      <th>振幅</th>\n      <th>涨跌幅</th>\n      <th>涨跌额</th>\n      <th>换手率</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2001-08-27</td>\n      <td>-70.44</td>\n      <td>-70.24</td>\n      <td>-69.79</td>\n      <td>-70.77</td>\n      <td>406318</td>\n      <td>1410347000.00</td>\n      <td>-1.38</td>\n      <td>1.15</td>\n      <td>0.82</td>\n      <td>56.83</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2001-08-28</td>\n      <td>-70.35</td>\n      <td>-69.97</td>\n      <td>-69.95</td>\n      <td>-70.42</td>\n      <td>129647</td>\n      <td>463463000.00</td>\n      <td>-0.67</td>\n      <td>0.38</td>\n      <td>0.27</td>\n      <td>18.13</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2001-08-29</td>\n      <td>-69.95</td>\n      <td>-70.07</td>\n      <td>-69.95</td>\n      <td>-70.13</td>\n      <td>53252</td>\n      <td>194689000.00</td>\n      <td>-0.26</td>\n      <td>-0.14</td>\n      <td>-0.10</td>\n      <td>7.45</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2001-08-30</td>\n      <td>-70.09</td>\n      <td>-69.93</td>\n      <td>-69.85</td>\n      <td>-70.15</td>\n      <td>48013</td>\n      <td>177558000.00</td>\n      <td>-0.43</td>\n      <td>0.20</td>\n      <td>0.14</td>\n      <td>6.72</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2001-08-31</td>\n      <td>-69.92</td>\n      <td>-69.94</td>\n      <td>-69.82</td>\n      <td>-69.99</td>\n      <td>23231</td>\n      <td>86231000.00</td>\n      <td>-0.24</td>\n      <td>-0.01</td>\n      <td>-0.01</td>\n      <td>3.25</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>4617</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2020-12-25</td>\n      <td>1802.99</td>\n      <td>1830.00</td>\n      <td>1847.00</td>\n      <td>1800.00</td>\n      <td>23088</td>\n      <td>4218997632.00</td>\n      <td>2.57</td>\n      <td>-0.02</td>\n      <td>-0.34</td>\n      <td>0.18</td>\n    </tr>\n    <tr>\n      <th>4618</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2020-12-28</td>\n      <td>1826.60</td>\n      <td>1873.00</td>\n      <td>1888.80</td>\n      <td>1826.05</td>\n      <td>30080</td>\n      <td>5616528640.00</td>\n      <td>3.43</td>\n      <td>2.35</td>\n      <td>43.00</td>\n      <td>0.24</td>\n    </tr>\n    <tr>\n      <th>4619</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2020-12-29</td>\n      <td>1873.00</td>\n      <td>1867.00</td>\n      <td>1886.80</td>\n      <td>1855.00</td>\n      <td>22868</td>\n      <td>4275994832.00</td>\n      <td>1.70</td>\n      <td>-0.32</td>\n      <td>-6.00</td>\n      <td>0.18</td>\n    </tr>\n    <tr>\n      <th>4620</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2020-12-30</td>\n      <td>1870.00</td>\n      <td>1933.00</td>\n      <td>1933.00</td>\n      <td>1869.99</td>\n      <td>34452</td>\n      <td>6604461312.00</td>\n      <td>3.37</td>\n      <td>3.54</td>\n      <td>66.00</td>\n      <td>0.27</td>\n    </tr>\n    <tr>\n      <th>4621</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2020-12-31</td>\n      <td>1941.00</td>\n      <td>1998.00</td>\n      <td>1998.98</td>\n      <td>1939.00</td>\n      <td>38860</td>\n      <td>7682300672.00</td>\n      <td>3.10</td>\n      <td>3.36</td>\n      <td>65.00</td>\n      <td>0.31</td>\n    </tr>\n  </tbody>\n</table>\n<p>4622 rows × 13 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "source": [
@@ -183,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +228,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>股票名称</th>\n      <th>股票代码</th>\n      <th>日期</th>\n      <th>开盘</th>\n      <th>收盘</th>\n      <th>最高</th>\n      <th>最低</th>\n      <th>成交量</th>\n      <th>成交额</th>\n      <th>振幅</th>\n      <th>涨跌幅</th>\n      <th>涨跌额</th>\n      <th>换手率</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-22 09:35</td>\n      <td>2089.90</td>\n      <td>2064.95</td>\n      <td>2099.00</td>\n      <td>2059.00</td>\n      <td>2933</td>\n      <td>609631537.00</td>\n      <td>1.92</td>\n      <td>-0.72</td>\n      <td>-15.05</td>\n      <td>0.02</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-22 09:40</td>\n      <td>2064.95</td>\n      <td>2070.00</td>\n      <td>2076.05</td>\n      <td>2061.01</td>\n      <td>1311</td>\n      <td>270848527.00</td>\n      <td>0.73</td>\n      <td>0.24</td>\n      <td>5.05</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-22 09:45</td>\n      <td>2070.01</td>\n      <td>2072.00</td>\n      <td>2073.77</td>\n      <td>2064.00</td>\n      <td>573</td>\n      <td>118486228.00</td>\n      <td>0.47</td>\n      <td>0.10</td>\n      <td>2.00</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-22 09:50</td>\n      <td>2069.80</td>\n      <td>2072.00</td>\n      <td>2072.88</td>\n      <td>2064.99</td>\n      <td>597</td>\n      <td>123439180.00</td>\n      <td>0.38</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-22 09:55</td>\n      <td>2071.20</td>\n      <td>2065.20</td>\n      <td>2071.20</td>\n      <td>2065.00</td>\n      <td>559</td>\n      <td>115574249.00</td>\n      <td>0.30</td>\n      <td>-0.33</td>\n      <td>-6.80</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1531</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-09 14:40</td>\n      <td>2194.80</td>\n      <td>2196.68</td>\n      <td>2199.76</td>\n      <td>2194.80</td>\n      <td>503</td>\n      <td>110448621.00</td>\n      <td>0.23</td>\n      <td>0.14</td>\n      <td>3.14</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>1532</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-09 14:45</td>\n      <td>2196.89</td>\n      <td>2197.89</td>\n      <td>2199.00</td>\n      <td>2195.80</td>\n      <td>586</td>\n      <td>128755034.00</td>\n      <td>0.15</td>\n      <td>0.06</td>\n      <td>1.21</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>1533</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-09 14:50</td>\n      <td>2197.88</td>\n      <td>2198.74</td>\n      <td>2198.99</td>\n      <td>2197.11</td>\n      <td>448</td>\n      <td>98474053.00</td>\n      <td>0.09</td>\n      <td>0.04</td>\n      <td>0.85</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>1534</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-09 14:55</td>\n      <td>2198.72</td>\n      <td>2198.57</td>\n      <td>2198.80</td>\n      <td>2198.00</td>\n      <td>414</td>\n      <td>90951700.00</td>\n      <td>0.04</td>\n      <td>-0.01</td>\n      <td>-0.17</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>1535</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-09 15:00</td>\n      <td>2198.57</td>\n      <td>2199.50</td>\n      <td>2199.50</td>\n      <td>2198.20</td>\n      <td>457</td>\n      <td>100500494.00</td>\n      <td>0.06</td>\n      <td>0.04</td>\n      <td>0.93</td>\n      <td>0.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>1536 rows × 13 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 5
     }
    ],
    "source": [
@@ -242,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Processing: 600519: 100%|██████████| 2/2 [00:00<00:00,  3.57it/s]\n"
+      "Processing: 600519: 100%|██████████| 2/2 [00:02<00:00,  1.26s/it]\n"
      ]
     }
    ],
@@ -263,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +281,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 7
     }
    ],
    "source": [
