--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -28,10 +28,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import efinance as ef"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "processing 161725: 100%|██████████| 12/12 [00:06<00:00,  1.95it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ef.fund.get_pdf_reports('161725')"
+   ]
   }
  ]
 }
