--- a/examples/stock.ipynb
+++ b/examples/stock.ipynb
@@ -67,11 +67,11 @@
       "text/plain": [
        "股票代码                  600519\n",
        "股票名称                    贵州茅台\n",
-       "市盈率(动)                 49.35\n",
-       "市盈率                    15.72\n",
+       "市盈率(动)                 46.29\n",
+       "市盈率                    14.74\n",
        "所处行业                    酿酒行业\n",
-       "总市值          2754841775400.0\n",
-       "流通市值         2754841775400.0\n",
+       "总市值          2583998874600.0\n",
+       "流通市值         2583998874600.0\n",
        "板块编号                  BK0477\n",
        "ROE                     8.29\n",
        "净利率                  54.1678\n",
@@ -105,7 +105,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "processing 300750: 100%|██████████| 2/2 [00:00<00:00, 19.10it/s]"
+      "processing 300750: 100%|██████████| 2/2 [00:00<00:00,  9.97it/s]"
      ]
     },
     {
@@ -113,14 +113,14 @@
      "data": {
       "text/plain": [
        "     股票代码  股票名称  市盈率(动)    市盈率  所处行业           总市值          流通市值    板块编号  \\\n",
-       "0  600519  贵州茅台   49.35  15.72  酿酒行业  2.754842e+12  2.754842e+12  BK0477   \n",
-       "1  300750  宁德时代  132.60  15.79  汽车行业  1.036616e+12  1.027674e+12  BK0481   \n",
+       "0  600519  贵州茅台   46.29  14.74  酿酒行业  2.583999e+12  2.583999e+12  BK0477   \n",
+       "1  300750  宁德时代  134.27  15.99  汽车行业  1.049708e+12  1.040653e+12  BK0481   \n",
        "\n",
        "    ROE      净利率           净利润      毛利率  \n",
        "0  8.29  54.1678  1.395446e+10  91.6763  \n",
        "1  3.01  12.2289  1.954417e+09  27.2795  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>股票代码</th>\n      <th>股票名称</th>\n      <th>市盈率(动)</th>\n      <th>市盈率</th>\n      <th>所处行业</th>\n      <th>总市值</th>\n      <th>流通市值</th>\n      <th>板块编号</th>\n      <th>ROE</th>\n      <th>净利率</th>\n      <th>净利润</th>\n      <th>毛利率</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>600519</td>\n      <td>贵州茅台</td>\n      <td>49.35</td>\n      <td>15.72</td>\n      <td>酿酒行业</td>\n      <td>2.754842e+12</td>\n      <td>2.754842e+12</td>\n      <td>BK0477</td>\n      <td>8.29</td>\n      <td>54.1678</td>\n      <td>1.395446e+10</td>\n      <td>91.6763</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>300750</td>\n      <td>宁德时代</td>\n      <td>132.60</td>\n      <td>15.79</td>\n      <td>汽车行业</td>\n      <td>1.036616e+12</td>\n      <td>1.027674e+12</td>\n      <td>BK0481</td>\n      <td>3.01</td>\n      <td>12.2289</td>\n      <td>1.954417e+09</td>\n      <td>27.2795</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>股票代码</th>\n      <th>股票名称</th>\n      <th>市盈率(动)</th>\n      <th>市盈率</th>\n      <th>所处行业</th>\n      <th>总市值</th>\n      <th>流通市值</th>\n      <th>板块编号</th>\n      <th>ROE</th>\n      <th>净利率</th>\n      <th>净利润</th>\n      <th>毛利率</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>600519</td>\n      <td>贵州茅台</td>\n      <td>46.29</td>\n      <td>14.74</td>\n      <td>酿酒行业</td>\n      <td>2.583999e+12</td>\n      <td>2.583999e+12</td>\n      <td>BK0477</td>\n      <td>8.29</td>\n      <td>54.1678</td>\n      <td>1.395446e+10</td>\n      <td>91.6763</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>300750</td>\n      <td>宁德时代</td>\n      <td>134.27</td>\n      <td>15.99</td>\n      <td>汽车行业</td>\n      <td>1.049708e+12</td>\n      <td>1.040653e+12</td>\n      <td>BK0481</td>\n      <td>3.01</td>\n      <td>12.2289</td>\n      <td>1.954417e+09</td>\n      <td>27.2795</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 3
@@ -143,6 +143,13 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "processing 300750: 100%|██████████| 2/2 [00:00<00:00,  3.47it/s]\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -201,45 +208,38 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "processing 300750: 100%|██████████| 2/2 [00:02<00:00,  1.14s/it]\n"
-     ]
-    },
-    {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
        "      股票名称    股票代码                日期       开盘       收盘       最高       最低  \\\n",
-       "0     贵州茅台  600519  2021-04-27 09:35  2087.08  2075.62  2089.00  2071.22   \n",
-       "1     贵州茅台  600519  2021-04-27 09:40  2076.72  2071.10  2078.00  2065.09   \n",
-       "2     贵州茅台  600519  2021-04-27 09:45  2070.99  2073.39  2074.00  2066.47   \n",
-       "3     贵州茅台  600519  2021-04-27 09:50  2073.43  2086.60  2086.60  2070.10   \n",
-       "4     贵州茅台  600519  2021-04-27 09:55  2086.00  2084.96  2089.99  2073.01   \n",
+       "0     贵州茅台  600519  2021-05-06 09:35  2000.00  1988.04  2006.00  1983.04   \n",
+       "1     贵州茅台  600519  2021-05-06 09:40  1988.04  1988.40  1999.00  1987.98   \n",
+       "2     贵州茅台  600519  2021-05-06 09:45  1988.11  1990.10  1996.00  1988.11   \n",
+       "3     贵州茅台  600519  2021-05-06 09:50  1990.00  1999.48  2000.00  1990.00   \n",
+       "4     贵州茅台  600519  2021-05-06 09:55  1999.00  2005.87  2006.83  1999.00   \n",
        "...    ...     ...               ...      ...      ...      ...      ...   \n",
-       "1531  贵州茅台  600519  2021-06-15 14:40  2193.11  2194.08  2195.99  2193.05   \n",
-       "1532  贵州茅台  600519  2021-06-15 14:45  2194.96  2195.08  2196.00  2193.05   \n",
-       "1533  贵州茅台  600519  2021-06-15 14:50  2195.99  2195.70  2196.00  2195.10   \n",
-       "1534  贵州茅台  600519  2021-06-15 14:55  2195.59  2195.99  2198.00  2195.44   \n",
-       "1535  贵州茅台  600519  2021-06-15 15:00  2196.00  2193.00  2197.45  2193.00   \n",
+       "1507  贵州茅台  600519  2021-06-21 11:10  2071.98  2061.18  2071.98  2061.18   \n",
+       "1508  贵州茅台  600519  2021-06-21 11:15  2061.00  2060.60  2064.99  2057.70   \n",
+       "1509  贵州茅台  600519  2021-06-21 11:20  2060.60  2055.50  2064.70  2055.50   \n",
+       "1510  贵州茅台  600519  2021-06-21 11:25  2055.05  2058.00  2059.98  2050.00   \n",
+       "1511  贵州茅台  600519  2021-06-21 11:30  2058.00  2057.00  2059.00  2055.91   \n",
        "\n",
-       "       成交量           成交额    振幅    涨跌幅    涨跌额   换手率  \n",
-       "0     1571  326956690.00  0.86  -0.11  -2.20  0.01  \n",
-       "1     1467  303719578.00  0.62  -0.22  -4.52  0.01  \n",
-       "2      630  130532178.00  0.36   0.11   2.29  0.01  \n",
-       "3      860  178883721.00  0.80   0.64  13.21  0.01  \n",
-       "4      863  179926439.00  0.81  -0.08  -1.64  0.01  \n",
-       "...    ...           ...   ...    ...    ...   ...  \n",
-       "1531   232   50913057.00  0.13   0.00   0.08  0.00  \n",
-       "1532   328   71988935.00  0.13   0.05   1.00  0.00  \n",
-       "1533   334   73418896.00  0.04   0.03   0.62  0.00  \n",
-       "1534   462  101532815.00  0.12   0.01   0.29  0.00  \n",
-       "1535   520  114144424.00  0.20  -0.14  -2.99  0.00  \n",
+       "       成交量            成交额    振幅    涨跌幅     涨跌额   换手率  \n",
+       "0     5726  1141453999.00  1.14  -0.93  -18.74  0.05  \n",
+       "1     1646   327768485.00  0.55   0.02    0.36  0.01  \n",
+       "2     1232   245390488.00  0.40   0.09    1.70  0.01  \n",
+       "3     1430   285409717.00  0.50   0.47    9.38  0.01  \n",
+       "4     1770   354398417.00  0.39   0.32    6.39  0.01  \n",
+       "...    ...            ...   ...    ...     ...   ...  \n",
+       "1507   724   149585568.00  0.52  -0.38   -7.86  0.01  \n",
+       "1508  1001   206259388.00  0.35  -0.03   -0.58  0.01  \n",
+       "1509   826   170060004.00  0.45  -0.25   -5.10  0.01  \n",
+       "1510   922   189199008.00  0.49   0.12    2.50  0.01  \n",
+       "1511   280    57609366.00  0.15  -0.05   -1.00  0.00  \n",
        "\n",
-       "[1536 rows x 13 columns]"
+       "[1512 rows x 13 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>股票名称</th>\n      <th>股票代码</th>\n      <th>日期</th>\n      <th>开盘</th>\n      <th>收盘</th>\n      <th>最高</th>\n      <th>最低</th>\n      <th>成交量</th>\n      <th>成交额</th>\n      <th>振幅</th>\n      <th>涨跌幅</th>\n      <th>涨跌额</th>\n      <th>换手率</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-27 09:35</td>\n      <td>2087.08</td>\n      <td>2075.62</td>\n      <td>2089.00</td>\n      <td>2071.22</td>\n      <td>1571</td>\n      <td>326956690.00</td>\n      <td>0.86</td>\n      <td>-0.11</td>\n      <td>-2.20</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-27 09:40</td>\n      <td>2076.72</td>\n      <td>2071.10</td>\n      <td>2078.00</td>\n      <td>2065.09</td>\n      <td>1467</td>\n      <td>303719578.00</td>\n      <td>0.62</td>\n      <td>-0.22</td>\n      <td>-4.52</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-27 09:45</td>\n      <td>2070.99</td>\n      <td>2073.39</td>\n      <td>2074.00</td>\n      <td>2066.47</td>\n      <td>630</td>\n      <td>130532178.00</td>\n      <td>0.36</td>\n      <td>0.11</td>\n      <td>2.29</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-27 09:50</td>\n      <td>2073.43</td>\n      <td>2086.60</td>\n      <td>2086.60</td>\n      <td>2070.10</td>\n      <td>860</td>\n      <td>178883721.00</td>\n      <td>0.80</td>\n      <td>0.64</td>\n      <td>13.21</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-04-27 09:55</td>\n      <td>2086.00</td>\n      <td>2084.96</td>\n      <td>2089.99</td>\n      <td>2073.01</td>\n      <td>863</td>\n      <td>179926439.00</td>\n      <td>0.81</td>\n      <td>-0.08</td>\n      <td>-1.64</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1531</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-15 14:40</td>\n      <td>2193.11</td>\n      <td>2194.08</td>\n      <td>2195.99</td>\n      <td>2193.05</td>\n      <td>232</td>\n      <td>50913057.00</td>\n      <td>0.13</td>\n      <td>0.00</td>\n      <td>0.08</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>1532</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-15 14:45</td>\n      <td>2194.96</td>\n      <td>2195.08</td>\n      <td>2196.00</td>\n      <td>2193.05</td>\n      <td>328</td>\n      <td>71988935.00</td>\n      <td>0.13</td>\n      <td>0.05</td>\n      <td>1.00</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>1533</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-15 14:50</td>\n      <td>2195.99</td>\n      <td>2195.70</td>\n      <td>2196.00</td>\n      <td>2195.10</td>\n      <td>334</td>\n      <td>73418896.00</td>\n      <td>0.04</td>\n      <td>0.03</td>\n      <td>0.62</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>1534</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-15 14:55</td>\n      <td>2195.59</td>\n      <td>2195.99</td>\n      <td>2198.00</td>\n      <td>2195.44</td>\n      <td>462</td>\n      <td>101532815.00</td>\n      <td>0.12</td>\n      <td>0.01</td>\n      <td>0.29</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>1535</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-15 15:00</td>\n      <td>2196.00</td>\n      <td>2193.00</td>\n      <td>2197.45</td>\n      <td>2193.00</td>\n      <td>520</td>\n      <td>114144424.00</td>\n      <td>0.20</td>\n      <td>-0.14</td>\n      <td>-2.99</td>\n      <td>0.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>1536 rows × 13 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>股票名称</th>\n      <th>股票代码</th>\n      <th>日期</th>\n      <th>开盘</th>\n      <th>收盘</th>\n      <th>最高</th>\n      <th>最低</th>\n      <th>成交量</th>\n      <th>成交额</th>\n      <th>振幅</th>\n      <th>涨跌幅</th>\n      <th>涨跌额</th>\n      <th>换手率</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-05-06 09:35</td>\n      <td>2000.00</td>\n      <td>1988.04</td>\n      <td>2006.00</td>\n      <td>1983.04</td>\n      <td>5726</td>\n      <td>1141453999.00</td>\n      <td>1.14</td>\n      <td>-0.93</td>\n      <td>-18.74</td>\n      <td>0.05</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-05-06 09:40</td>\n      <td>1988.04</td>\n      <td>1988.40</td>\n      <td>1999.00</td>\n      <td>1987.98</td>\n      <td>1646</td>\n      <td>327768485.00</td>\n      <td>0.55</td>\n      <td>0.02</td>\n      <td>0.36</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-05-06 09:45</td>\n      <td>1988.11</td>\n      <td>1990.10</td>\n      <td>1996.00</td>\n      <td>1988.11</td>\n      <td>1232</td>\n      <td>245390488.00</td>\n      <td>0.40</td>\n      <td>0.09</td>\n      <td>1.70</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-05-06 09:50</td>\n      <td>1990.00</td>\n      <td>1999.48</td>\n      <td>2000.00</td>\n      <td>1990.00</td>\n      <td>1430</td>\n      <td>285409717.00</td>\n      <td>0.50</td>\n      <td>0.47</td>\n      <td>9.38</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-05-06 09:55</td>\n      <td>1999.00</td>\n      <td>2005.87</td>\n      <td>2006.83</td>\n      <td>1999.00</td>\n      <td>1770</td>\n      <td>354398417.00</td>\n      <td>0.39</td>\n      <td>0.32</td>\n      <td>6.39</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1507</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-21 11:10</td>\n      <td>2071.98</td>\n      <td>2061.18</td>\n      <td>2071.98</td>\n      <td>2061.18</td>\n      <td>724</td>\n      <td>149585568.00</td>\n      <td>0.52</td>\n      <td>-0.38</td>\n      <td>-7.86</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>1508</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-21 11:15</td>\n      <td>2061.00</td>\n      <td>2060.60</td>\n      <td>2064.99</td>\n      <td>2057.70</td>\n      <td>1001</td>\n      <td>206259388.00</td>\n      <td>0.35</td>\n      <td>-0.03</td>\n      <td>-0.58</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>1509</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-21 11:20</td>\n      <td>2060.60</td>\n      <td>2055.50</td>\n      <td>2064.70</td>\n      <td>2055.50</td>\n      <td>826</td>\n      <td>170060004.00</td>\n      <td>0.45</td>\n      <td>-0.25</td>\n      <td>-5.10</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>1510</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-21 11:25</td>\n      <td>2055.05</td>\n      <td>2058.00</td>\n      <td>2059.98</td>\n      <td>2050.00</td>\n      <td>922</td>\n      <td>189199008.00</td>\n      <td>0.49</td>\n      <td>0.12</td>\n      <td>2.50</td>\n      <td>0.01</td>\n    </tr>\n    <tr>\n      <th>1511</th>\n      <td>贵州茅台</td>\n      <td>600519</td>\n      <td>2021-06-21 11:30</td>\n      <td>2058.00</td>\n      <td>2057.00</td>\n      <td>2059.00</td>\n      <td>2055.91</td>\n      <td>280</td>\n      <td>57609366.00</td>\n      <td>0.15</td>\n      <td>-0.05</td>\n      <td>-1.00</td>\n      <td>0.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>1512 rows × 13 columns</p>\n</div>"
      },
      "metadata": {},
      "execution_count": 5
@@ -270,7 +270,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Processing: 600519: 100%|██████████| 2/2 [00:02<00:00,  1.38s/it]\n"
+      "Processing: 600519: 100%|██████████| 2/2 [00:00<00:00,  4.58it/s]\n"
      ]
     }
    ],
